Fix overlay for truncated meeting participant list

--- a/indico/web/client/styles/partials/_core.scss
+++ b/indico/web/client/styles/partials/_core.scss
@@ -101,6 +101,7 @@
     height: 3em;
     position: absolute;
     width: 100%;
+    z-index: 1;
   }
 }
 
